# pvsc-microgrid-simulator

./: .cursorrules  .gitignore  ANALYTICS_IMPLEMENTATION_EVALUATION.md  ARCHITECTURE.md  BUILD_README.md  PACKAGING.md  PORTS_README.md  README.md  activate-build.bat  activate-build.ps1  activate-dev.bat  activate-dev.ps1  build-release.bat  build-release.sh  build.bat  build.ps1  build.py  chuzhou-topo.json  chuzhou_topology.json  compatibility_test.md  create_connections.py  environment.yml  index.html  modbus_manager.py  network.json  nuitka-crash-report.xml  pack_nuitka.py  pack_python_kernel.py  pack_release.py  package-lock.json  package.json  pandapower_sim.spec  performance_report.md  requirements-build.txt  requirements-dev.txt  requirements.txt  run-release.sh  setup_pyenv.bat  setup_venv.py  tailwind.config.js  (+13 more)
config/: default_config.json  temp_config.json
doc/: README.md  TopoRule.md  connect_rule.md  meter_dock_design.md
src-tauri/: Cargo.toml  data_1770183759.db-journal  tauri.conf.json  topology.json
src-tauri/capabilities/: default.json
src-tauri/icons/: create_icons.py  icon.icns
src-tauri/src/: main.rs
src-tauri/src/commands/: ai.rs  analytics.rs  dashboard.rs  device.rs  mod.rs  modbus.rs  monitoring.rs  simulation.rs  ssh.rs  topology.rs
src-tauri/src/domain/: device.rs  metadata.rs  mod.rs  simulation.rs  topology.rs
src-tauri/src/services/: database.rs  delay_simulator.rs  kernel_factory.rs  mod.rs  modbus.rs  modbus_filter.rs  modbus_schema.rs  modbus_server.rs  mode_handler.rs  python_bridge.rs  simulation_engine.rs  ssh.rs
(+303 files in other folders)
