[package]
name = "pvsc-microgrid-simulator"
version = "0.1.0"
description = "光储充微电网模拟器"
authors = ["PVSC Team"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
async-ssh2-tokio = "0.9"  # SSH 客户端（参考 remote-tool）
rand = "0.8"  # 随机数生成（用于误差模拟）

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
